Attempt to fix context menu on ios

--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,10 @@ body {
   -webkit-touch-callout: none;
 }
 
+#root.mobileAgent {
+  -webkit-user-select: none;
+}
+
 textarea {
   font-family: "Inter", sans-serif;
 }
